--- a/_includes/component/menu.njk
+++ b/_includes/component/menu.njk
@@ -1,23 +1,25 @@
-<div class="menu grid-default py-2.5 outer-margin border-b border-gray-900 gap-y-2">
-    <div class="col-span-1 inner-margin-mobile flex items-center justify-center">
-        <a href="/" class="">
-            <span class="inline-flex align-middle">
-                <svg width="28" height="33" viewBox="0 0 28 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M5.35196 11.0501L0.751953 0.850098H4.95197L8.35196 8.25012C7.45196 8.85012 6.25196 9.85011 5.35196 11.0501ZM11.352 14.7501C10.452 15.7501 9.45195 17.2501 9.25195 19.8501L10.6519 22.8501H14.6519L24.6519 0.850098H20.452L12.6519 17.6501L11.352 14.7501ZM21.052 12.3501C22.652 13.2501 23.852 14.6501 24.352 16.3501L27.352 14.8501C26.552 12.4501 24.852 10.4501 22.552 9.15009L21.052 12.3501ZM18.1519 18.8501L16.352 22.7501H23.852C23.452 26.1501 20.552 29.1501 16.252 29.1501C11.452 29.1501 7.75195 25.0501 7.75195 20.0501C7.75195 15.8501 10.252 12.3501 13.952 11.3501L15.852 7.3501C9.05196 7.5501 3.85196 13.2501 3.85196 20.0501C3.85196 27.0501 9.25196 32.7501 16.352 32.7501C19.152 32.7501 22.852 31.2501 24.252 29.3501V32.2501H27.852V18.8501H18.1519Z" fill="black"/>
-                </svg>
-            </span>
-        </a>
-    </div>
+<div class="menu  py-2.5 outer-margin border-b border-gray-900">
+    <div class="inner-margin-mobile grid grid-cols-2 sm:grid-cols-12">
+        <div class="col-span-1 flex items-center justify-start sm:justify-center">
+            <a href="/" class="">
+                <span class="inline-flex align-middle">
+                    <svg width="28" height="33" viewBox="0 0 28 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.35196 11.0501L0.751953 0.850098H4.95197L8.35196 8.25012C7.45196 8.85012 6.25196 9.85011 5.35196 11.0501ZM11.352 14.7501C10.452 15.7501 9.45195 17.2501 9.25195 19.8501L10.6519 22.8501H14.6519L24.6519 0.850098H20.452L12.6519 17.6501L11.352 14.7501ZM21.052 12.3501C22.652 13.2501 23.852 14.6501 24.352 16.3501L27.352 14.8501C26.552 12.4501 24.852 10.4501 22.552 9.15009L21.052 12.3501ZM18.1519 18.8501L16.352 22.7501H23.852C23.452 26.1501 20.552 29.1501 16.252 29.1501C11.452 29.1501 7.75195 25.0501 7.75195 20.0501C7.75195 15.8501 10.252 12.3501 13.952 11.3501L15.852 7.3501C9.05196 7.5501 3.85196 13.2501 3.85196 20.0501C3.85196 27.0501 9.25196 32.7501 16.352 32.7501C19.152 32.7501 22.852 31.2501 24.252 29.3501V32.2501H27.852V18.8501H18.1519Z" fill="black"/>
+                    </svg>
+                </span>
+            </a>
+        </div>
 
-    <div class="col-span-10 hidden sm:flex items-center justify-center">
-        <p class="text-sm sm:text-lg font-mono uppercase leading-none">
-            <span class="">A contemporary communications company</span>
-        </h3>
-    </div>
-    
-    <div class="col-span-1  ml-5 sm:ml-0 text-right col-start-5 sm:col-start-12 flex items-center justify-center sm:mr-0">
-        <a href="#contact" class="text-lg font-mono uppercase leading-none">
-            Contact
-        </a>
+        <div class="col-span-10 hidden sm:flex items-center justify-center">
+            <p class="text-sm sm:text-lg font-mono uppercase leading-none">
+                <span class="">A contemporary communications company</span>
+            </h3>
+        </div>
+        
+        <div class="col-span-1 sm:col-start-12 flex items-center justify-end sm:justify-center mr-0 sm:mr-8 lg:mr-0">
+            <a href="#contact" class="text-lg font-mono uppercase leading-none">
+                Contact
+            </a>
+        </div>
     </div>
 </div>
