--- a/_includes/section/whowesupport.njk
+++ b/_includes/section/whowesupport.njk
@@ -23,7 +23,7 @@
             <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
                 Startups
             </h3>
-            <p class="text-xl mt-5">
+            <p class="text-xl mt-5 font-medium">
                 For the crazy ones, the innovators, the rule breakers. Finding PMF is an unknown journey based on data and gut instinct. Our founder is a former fintech CEO who understands what’s it like to push the boundaries of normal and to be told it’s not possible. 
             </p>
         </div>
@@ -38,7 +38,7 @@
             <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
                 Scaleups
             </h3>
-            <p class="text-xl mt-5">
+            <p class="text-xl mt-5 font-medium">
                 Moving from PMF to blitzscaling isn’t easy. New channels, new ICP’s and a realisation that brand has to be taken seriously. We find new growth sources for clients while fine tuning and amplifying what’s already working. 
             </p>
         </div>
@@ -53,7 +53,7 @@
             <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
                 CPGs
             </h3>
-            <p class="text-xl mt-5">
+            <p class="text-xl mt-5 font-medium">
                 Digital ubiquity and a changing consumer means the sands continue to shift on CPG brands. We provide evergreen growth using relevance-led brand building & distribution. We don’t focus on yesterday, or tomorrow, we focus on today. 
             </p>
         </div>
