--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -36,4 +36,11 @@
 
         </div>
     </body>
+    <script>
+        window.addEventListener('load', (event) => {
+                document.getElementById('tell-us-more-link').addEventListener('click', () => {
+                        fathom.trackGoal('SMTTKR2E', 0);
+                });
+        });
+    </script>
 </html>
