--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -22,7 +22,7 @@
             <div class="inner-margin flex flex-col">
                 
                 <div class="flex mt-8 lg:mt-8 sm:px-0">
-                    <a class="btn btn-secondary" href="https://forms.gle/BhV6PBCrcbfioY3L7" target="_blank" id="tell-us-more-link" onclick="fathom.trackGoal('SMTTKR2E', 0);">Tell Us More</a>
+                    <a class="btn btn-secondary" href="https://forms.gle/BhV6PBCrcbfioY3L7" target="_blank" id="tell-us-more-link">Tell Us More</a>
                 </div>
             </div>
         </div>
