--- a/_includes/section/marketing.njk
+++ b/_includes/section/marketing.njk
@@ -11,99 +11,99 @@
     </div>
 
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center">
+        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 01
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center inner-margin-mobile">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
+        <div class="col-span-3 flex items-center ">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
                 Relevance
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile">
-            <p class="text-lg font-mono uppercase leading-none">
+        <div class="col-span-12 lg:col-span-8 flex items-center ">
+            <p class="text-lg font-mono uppercase leading-none marketing-desc">
                 Be in the right place, at the right time for the right audience
             </p>
         </div>
     </div>
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center">
+        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 02
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center inner-margin-mobile">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
+        <div class="col-span-3 flex items-center ">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
                 Distribution
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile">
-            <p class="text-lg font-mono uppercase leading-none">
+        <div class="col-span-12 lg:col-span-8 flex items-center ">
+            <p class="text-lg font-mono uppercase leading-none marketing-desc">
                 Scale your story across the internet
             </p>
         </div>
     </div>
     
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center">
+        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 03
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center inner-margin-mobile">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
+        <div class="col-span-3 flex items-center ">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
                 B2B
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile">
-            <p class="text-lg font-mono uppercase leading-none">
+        <div class="col-span-12 lg:col-span-8 flex items-center ">
+            <p class="text-lg font-mono uppercase leading-none marketing-desc">
                 A Content Engine That Builds Trust & Creates Sales Pipeline
             </p>
         </div>
     </div>
 
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center">
+        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 04
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center inner-margin-mobile">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
+        <div class="col-span-3 flex items-center ">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
                 Transformation
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile">
-            <p class="text-lg font-mono uppercase leading-none">
+        <div class="col-span-12 lg:col-span-8 flex items-center ">
+            <p class="text-lg font-mono uppercase leading-none marketing-desc">
                 Marketing Is Changing Faster Than Ever, Adapt & Evolve Along With It
             </p>
         </div>
     </div>
 
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center">
+        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 05
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center inner-margin-mobile">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
+        <div class="col-span-3 flex items-center ">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
                 (Brand) DNA
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile">
-            <p class="text-lg font-mono uppercase leading-none">
+        <div class="col-span-12 lg:col-span-8 flex items-center ">
+            <p class="text-lg font-mono uppercase leading-none marketing-desc">
                 Unlock what makes your brand a unique, one of a kind.
             </p>
         </div>
