--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -9,7 +9,7 @@
     <meta property="og:description" name="description" content="{{description}}"/>
     <meta property="og:title" name="title" content="{{ title }}">
     <link rel="icon" href="/src/images/favicon.svg" type="image/svg+xml" />
-    <meta property="og:image" content="{{ '/src/og-images/og-image.png' | url }}" />
+    <meta property="og:image" content="{{ '/src/images/og-image.png' | url }}" />
 
     <meta property="og:type" content="article">
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
