--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"/>
     <link rel="stylesheet" href="/style.css?v={% version %}"/>
     <script src="https://cdn.usefathom.com/script.js" data-site="LJAEUEIS" defer></script>
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/26930958.js"></script>
     {% block head %}{% endblock %}
 </head>
 
