--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -3,7 +3,7 @@
     </div>
     <div class="horizontal-lines top-0"></div>
 
-    <div class="z-1 grid-on-green absolute top-0 w-full h-full">
+    <div class="z-1 grid-on-green absolute top-0 w-full h-full border-t border-gray-900">
         {% include "component/grid.njk" %}
     </div>
 </div>
