--- a/_includes/section/marketing.njk
+++ b/_includes/section/marketing.njk
@@ -11,102 +11,83 @@
     </div>
 
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
+        <div class="col-span-12 lg:col-span-1 flex marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 01
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center ">
+        <div class="col-span-3 flex">
             <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
-                Relevance
+                Content
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center ">
-            <p class="text-lg font-mono uppercase leading-none marketing-desc">
-                Be in the right place, at the right time for the right audience
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-medium leading-tight marketing-desc">
+                We drive business results by telling stories where your consumers are paying the most attention. The modern-day creative manifesto that builds brand, emotional connection & revenue. 
             </p>
         </div>
     </div>
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
+        <div class="col-span-12 lg:col-span-1 flex marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 02
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center ">
+        <div class="col-span-3 flex">
             <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
-                Distribution
+                Social
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center ">
-            <p class="text-lg font-mono uppercase leading-none marketing-desc">
-                Scale your story across the internet
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-medium leading-tight marketing-desc">
+                As a true social AOR we build brand & community by combining relevance with contextual reach & distribution. Social media is “the media” and with reactive community management, social-first campaigns & influencer partnerships we make sure our clients are participating in the conversation.
             </p>
         </div>
     </div>
     
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
+        <div class="col-span-12 lg:col-span-1 flex marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 03
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center ">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
-                B2B
-            </h3>
-        </div>
-        
-        <div class="col-span-12 lg:col-span-8 flex items-center ">
-            <p class="text-lg font-mono uppercase leading-none marketing-desc">
-                A Content Engine That Builds Trust & Creates Sales Pipeline
-            </p>
-        </div>
-    </div>
-
-    <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
-            <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
-                04
-            </p>
-        </div>
-
-        <div class="col-span-3 flex items-center ">
+        <div class="col-span-3 flex">
             <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
                 Transformation
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center ">
-            <p class="text-lg font-mono uppercase leading-none marketing-desc">
-                Marketing Is Changing Faster Than Ever, Adapt & Evolve Along With It
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-medium leading-tight marketing-desc">
+                By passing on our savoir-faire, we educate, direct & build in house modern-day marketing teams so businesses can continue to ride the electronic wave.
             </p>
         </div>
     </div>
 
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1  flex items-center marketing-number">
+        <div class="col-span-12 lg:col-span-1 flex marketing-number">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
-                05
+                04
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center ">
+        <div class="col-span-3 flex">
             <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
-                (Brand) DNA
+                DNA
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center ">
-            <p class="text-lg font-mono uppercase leading-none marketing-desc">
-                Unlock what makes your brand a unique, one of a kind.
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-medium leading-tight marketing-desc">
+                We help clients find, reshape and refine their unique DNA. We unlock the irrational, intangible things that make a brand unique. This DNA forms the foundations for creative, innovative work to be built on.
             </p>
         </div>
     </div>
+
 
 </section>
