--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-description: A contemporary communications company
+description: A contemporary communications company with a maniacal focus on the modern craftsmanships of electronic advertising.
 title: Veblen Giffen
 ---
 
