--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -1,7 +1,7 @@
 <div class="relative">
     <div class="video-container bg-green-500">
     </div>
-    <div class="horizontal-lines top-0"></div>
+    <div class="lines-on-green horizontal-lines top-0"></div>
 
     <div class="z-1 grid-on-green absolute top-0 w-full h-full border-t border-gray-900">
         {% include "component/grid.njk" %}
