--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -53,6 +53,10 @@ body {
   background-image: linear-gradient(to bottom, rgba(255,255,255,0.1) 1px, transparent 0);
 }
 
+.lines-on-green.horizontal-lines {
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0.1) 1px, transparent 0);
+}
+
 .content {
   position: relative;
   z-index: 10;
@@ -116,7 +120,7 @@ h2 {
 }
 
 .grid-on-green .grid-columns-line {
-  border-right: 1px solid rgba(255, 255, 255, 0.035);
+  border-right: 1px solid rgba(255, 255, 255, 0.075);
 }
 
 .grid-columns-line:first-of-type {
