--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -1,5 +1,19 @@
 <div class="relative">
     <div class="video-container bg-green-500">
+        <div class="">
+            <div class="">
+                <div class="outer-margin grid grid-cols-12">
+                    <div class="col-start-2 col-span-10 lg:col-start-6 lg:col-span-6 flex mt-48 mb-28 flex-col gap-y-8">
+                        <h3 class="text-3xl lg:text-2xl font-medium mt-2 uppercase lg:text-gray-900">
+                            Veblen Giffen is a contemporary communications company with a maniacal focus on the modern craftsmanships of electronic advertising.
+                        </h3>
+                        <p class="text-xl font-medium leading-tight">
+                            To build a maniacally focused electronic only advertising services business which disrupts & rejects an outdated analog model. Through expert craftsmanship in content, social, community, & digital transformation and an uncompromising support of creators, who have proven quantifiable track records in mastering the métiers of modern marketing, Veblen Giffen is a haven for artistry that ushers brilliant businesses into the next era of the always online, 24-7, global world we live in.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="lines-on-green horizontal-lines top-0"></div>
 
