--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -8,7 +8,7 @@
                             Veblen Giffen is a contemporary communications company with a maniacal focus on the modern craftsmanships of electronic advertising.
                         </h3>
                         <p class="text-xl font-medium leading-tight">
-                            To build a maniacally focused electronic only advertising services business which disrupts & rejects an outdated analog model. Through expert craftsmanship in content, social, community, & digital transformation and an uncompromising support of creators, who have proven quantifiable track records in mastering the métiers of modern marketing, Veblen Giffen is a haven for artistry that ushers brilliant businesses into the next era of the always online, 24-7, global world we live in.
+                            To build a maniacally focused electronic only advertising services business which disrupts & rejects an outdated analog model. Through expert craftsmanship in content, social, community, & transformation and an uncompromising support of creators, who have proven quantifiable track records in mastering the métiers of modern marketing, Veblen Giffen is a haven for artistry that ushers brilliant businesses into the next era of the always online, 24-7, global world we live in.
                         </p>
                     </div>
                 </div>
