--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -3,7 +3,7 @@
         <div class="">
             <div class="">
                 <div class="outer-margin grid grid-cols-12">
-                    <div class="col-start-2 col-span-10 lg:col-start-6 lg:col-span-7 lg:mr-8 flex mt-60 mb-28 flex-col gap-y-8">
+                    <div class="col-start-2 col-span-10 lg:col-start-5 lg:col-span-7 flex mt-60 mb-28 flex-col gap-y-8">
                         <h3 class="text-3xl lg:text-2xl font-medium mt-2 uppercase lg:text-gray-900">
                             Veblen Giffen is a contemporary communications company with a maniacal focus on the modern craftsmanships of electronic advertising.
                         </h3>
