--- a/_includes/section/marketing.njk
+++ b/_includes/section/marketing.njk
@@ -23,7 +23,7 @@
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
+        <div class="col-span-12 sm:col-span-11 lg:col-span-7 flex items-center">
             <p class="text-xl font-medium leading-tight marketing-desc">
                 We drive business results by telling stories where your consumers are paying the most attention. The modern-day creative manifesto that builds brand, emotional connection & revenue. 
             </p>
@@ -42,7 +42,7 @@
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
+        <div class="col-span-12 sm:col-span-11 lg:col-span-7 flex items-center">
             <p class="text-xl font-medium leading-tight marketing-desc">
                 As a true social AOR we build brand & community by combining relevance with contextual reach & distribution. Social media is “the media” and with reactive community management, social-first campaigns & influencer partnerships we make sure our clients are participating in the conversation.
             </p>
@@ -62,7 +62,7 @@
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
+        <div class="col-span-12 sm:col-span-11 lg:col-span-7 flex items-center">
             <p class="text-xl font-medium leading-tight marketing-desc">
                 By passing on our savoir-faire, we educate, direct & build in house modern-day marketing teams so businesses can continue to ride the electronic wave.
             </p>
@@ -82,7 +82,7 @@
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
+        <div class="col-span-12 sm:col-span-11 lg:col-span-7 flex items-center">
             <p class="text-xl font-medium leading-tight marketing-desc">
                 We help clients find, reshape and refine their unique DNA. We unlock the irrational, intangible things that make a brand unique. This DNA forms the foundations for creative, innovative work to be built on.
             </p>
