--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -1,7 +1,7 @@
 <div class="relative">
     
-    <div class="video-container justify-center items-center flex bg-green-500">
-        <button class="absolute z-50 font-mono uppercase flex items-center gap-x-2 text-xl" id="playPauseButton">
+    <div class="video-container border-b border-gray-900 justify-center items-center flex bg-green-500">
+        <button class="h-full w-full justify-center absolute z-50 font-mono uppercase flex items-center gap-x-2 text-xl" id="playPauseButton">
             <svg width="16" height="19" viewBox="0 0 16 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0.38623 0.0400391L15.9747 9.04004L0.386231 18.04L0.38623 0.0400391Z" fill="black"/>
             </svg>
