--- a/_includes/section/whowesupport.njk
+++ b/_includes/section/whowesupport.njk
@@ -23,7 +23,7 @@
             <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
                 Tech companies
             </h3>
-            <p class="text-xl mt-5 font-medium">
+            <p class="text-xl mt-5 font-medium text-justify">
                 For the crazy ones, the innovators, the rule breakers. The most innovative companies in the world need innovative marketing from reliable experts with quantifiable track records. Changing the world isn't easy, we can help.
             </p>
         </div>
@@ -38,7 +38,7 @@
             <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
                 DTC
             </h3>
-            <p class="text-xl mt-5 font-medium">
+            <p class="text-xl mt-5 font-medium text-justify">
                 E-commerce marketing requires a performance heavy skillset paired with world class creative assets at scale. We understand the craft of creative is only as useful as the return on ad spend. Driving down customer acquisition while building brand is the name of the game.
             </p>
         </div>
@@ -53,7 +53,7 @@
             <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
                 CPGs
             </h3>
-            <p class="text-xl mt-5 font-medium">
+            <p class="text-xl mt-5 font-medium text-justify">
                 Digital ubiquity and a changing consumer means the sands continue to shift on CPG brands. We provide evergreen growth using relevance-led brand building & distribution. We don’t focus on yesterday, or tomorrow, we focus on today.
             </p>
         </div>
@@ -68,7 +68,7 @@
             <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
                 B2B
             </h3>
-            <p class="text-xl mt-5 font-medium">
+            <p class="text-xl mt-5 font-medium text-justify">
                 Building trust and social proof through content and clever distribution improves funnel metrics and creates fresh pipeline. Our founder used account based marketing approach to supercharge an outbound-led GTM which led to his start-up being acquired.
             </p>
         </div>
