--- a/index.njk
+++ b/index.njk
@@ -48,6 +48,8 @@ title: Veblen Giffen
 
 {% include "section/video.njk" %}
 
+{% include "section/mission.njk" %}
+
 {% include "section/marketing.njk" %}
 
 {% include "section/whowesupport.njk" %}
