--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -16,7 +16,7 @@
         <div>
             <div class="-z-0" id="videoContainer" style="display: none;">
                 <video id="videoPlayer">
-                    <source src="/src/images/vg-launch-video.mp4" type="video/mp4">
+                    <source src="/src/images/vg-launch-video.webm" type="video/webm">
                     Your browser does not support the video tag.
                 </video>
             </div>
