--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -64,6 +64,9 @@ body {
 
 h2 {
   @apply text-4xl md:text-6xl uppercase font-medium !important;
+  text-align: left;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 
 .font-mono {
@@ -166,6 +169,7 @@ h2 {
 
 .marketing-desc {
   line-height: 1.15 !important;
+  text-align: justify;
 }
 
 .menu {
