--- a/_includes/section/mission.njk
+++ b/_includes/section/mission.njk
@@ -9,19 +9,16 @@
 
         </div>
     </div>
-    
 
     <div class="grid-default py-8 outer-margin gap-y-2 mb-8">
 
         <div class="col-span-12 sm:col-span-11 lg:col-span-10 flex flex-col gap-y-4 items-center inner-margin">
             
-
-            <p class="text-xl font-medium leading-tight marketing-desc inner-margin text-justify">
+            <p class="text-xl font-medium leading-tight text-justify">
                 To build a maniacally focused electronic only advertising services business which disrupts & rejects an outdated analog model. Through expert craftsmanship in content, social, community, & transformation and an uncompromising support of creators, who have proven quantifiable track records in mastering the métiers of modern marketing, Veblen Giffen is a haven for artistry that ushers brilliant businesses into the next era of the always online, 24-7, global world we live in.
             </p>
         </div>
     </div>
    
-
 
 </section>
