--- a/_includes/section/mission.njk
+++ b/_includes/section/mission.njk
@@ -1,8 +1,8 @@
 <section id="marketing" class="border-b border-gray-900">
     <div class="mt-8 pt-8">
         <div class="outer-margin grid-default">
-            <div class="that  col-span-12 lg:col-span-11 inner-margin">
-                <h2 class="this text-justify">
+            <div class="col-span-12 lg:col-span-11 inner-margin">
+                <h2 class="sm:text-justify">
                     A contemporary communications company with a maniacal focus on the modern craftsmanships of electronic advertising.
                 </h2>
             </div>
