--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -17,7 +17,7 @@
             <div class="-z-0" id="videoContainer" style="display: none;">
                 <video id="videoPlayer">
                     <source src="/src/images/vg-launch-video.webm" type="video/webm">
-                    Your browser does not support the video tag.
+                    <source src="/media/cc0-videos/vg-launch-video.mp4" type="video/mp4" />
                 </video>
             </div>
         </div>
