--- a/_includes/section/whowesupport.njk
+++ b/_includes/section/whowesupport.njk
@@ -20,10 +20,10 @@
             <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
                 01
             </p>
-            <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
+            <h3 class="font-medium sm:mt-2 uppercase lg:text-gray-900">
                 Tech companies
             </h3>
-            <p class="text-xl mt-5 font-medium text-justify">
+            <p class="text-lg sm:text-xl leading-tight mt-1 sm:mt-5 font-medium">
                 For the crazy ones, the innovators, the rule breakers. The most innovative companies in the world need innovative marketing from reliable experts with quantifiable track records. Changing the world isn't easy, we can help.
             </p>
         </div>
@@ -35,25 +35,25 @@
             <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
                 02
             </p>
-            <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
+            <h3 class="font-medium sm:mt-2 uppercase lg:text-gray-900">
                 DTC
             </h3>
-            <p class="text-xl mt-5 font-medium text-justify">
+            <p class="text-lg sm:text-xl leading-tight mt-1 sm:mt-5 font-medium">
                 E-commerce marketing requires a performance heavy skillset paired with world class creative assets at scale. We understand the craft of creative is only as useful as the return on ad spend. Driving down customer acquisition while building brand is the name of the game.
             </p>
         </div>
 
-        <div class="col-span-12 sm:col-span-3 border-r-none border-r-0 sm:border-r border-gray-900 p-4 sm:p-8">
+        <div class="col-span-12 sm:col-span-3 border-b sm:border-b-0 border-r-none border-r-0 sm:border-r border-gray-900 p-4 sm:p-8">
             <div class="mb-12">
                 <svg width="45" height="44" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#a)"><path d="M.667 43.5H.161v.506h.506V43.5Zm42.976-.506H.667v1.012h42.976v-1.012Zm-42.47.506V.194H.161V43.5h1.012Z" fill="#000"/><g opacity=".1" stroke="#000" stroke-width=".38" clip-path="url(#b)"><path transform="matrix(.7071 -.7071 .2787 .96038 -23.18 16.879)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -21.765 18.293)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -20.35 19.707)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -18.936 21.122)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -17.523 22.536)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -16.108 23.95)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -14.694 25.364)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -13.28 26.778)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -11.865 28.192)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -10.451 29.607)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -9.037 31.021)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -7.623 32.435)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -6.208 33.85)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -4.794 35.264)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -3.38 36.678)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -1.966 38.092)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 -.552 39.506)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 .862 40.92)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 2.277 42.335)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 3.69 43.749)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 5.105 45.163)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 6.52 46.577)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 7.934 47.992)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 9.348 49.406)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 10.762 50.82)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 12.176 52.234)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 13.59 53.648)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 15.005 55.063)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 16.419 56.477)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 17.833 57.891)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 19.247 59.305)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 20.661 60.72)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 22.076 62.134)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 23.49 63.548)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 24.904 64.962)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 26.318 66.376)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 27.732 67.79)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 29.147 69.205)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 30.561 70.619)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 31.975 72.033)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 33.39 73.447)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 34.804 74.862)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 36.218 76.276)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 37.632 77.69)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 39.046 79.104)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 40.46 80.518)" d="M0-.19h59.9"/><path transform="matrix(.7071 -.7071 .2787 .96038 41.875 81.933)" d="M0-.19h59.9"/></g><circle cx="23.5" cy="21.193" r="11.68" fill="#000"/><path stroke="#F0533C" d="M8.473 35.86 37.821 6.513"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h45v44H0z"/></clipPath><clipPath id="b"><path fill="#fff" transform="translate(3 1)" d="M0 0h40v40H0z"/></clipPath></defs></svg>
             </div>
             <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
                 03
             </p>
-            <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
+            <h3 class="font-medium sm:mt-2 uppercase lg:text-gray-900">
                 CPGs
             </h3>
-            <p class="text-xl mt-5 font-medium text-justify">
+            <p class="text-lg sm:text-xl leading-tight mt-1 sm:mt-5 font-medium">
                 Digital ubiquity and a changing consumer means the sands continue to shift on CPG brands. We provide evergreen growth using relevance-led brand building & distribution. We don’t focus on yesterday, or tomorrow, we focus on today.
             </p>
         </div>
@@ -65,10 +65,10 @@
             <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
                 04
             </p>
-            <h3 class="text-2xl font-medium mt-2 uppercase lg:text-gray-900">
+            <h3 class="font-medium sm:mt-2 uppercase lg:text-gray-900">
                 B2B
             </h3>
-            <p class="text-xl mt-5 font-medium text-justify">
+            <p class="text-lg sm:text-xl leading-tight mt-1 sm:mt-5 font-medium">
                 Building trust and social proof through content and clever distribution improves funnel metrics and creates fresh pipeline. Our founder used account based marketing approach to supercharge an outbound-led GTM which led to his start-up being acquired.
             </p>
         </div>
