--- a/_includes/section/marketing.njk
+++ b/_includes/section/marketing.njk
@@ -11,79 +11,79 @@
     </div>
 
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 flex marketing-number">
+        <div class="col-span-12 lg:col-span-1 flex inner-margin">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 01
             </p>
         </div>
 
         <div class="col-span-3 flex">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
+            <h3 class=" uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 inner-margin">
                 Content
             </h3>
         </div>
         
         <div class="col-span-12 sm:col-span-11 lg:col-span-7 flex items-center">
-            <p class="text-xl font-medium leading-tight marketing-desc">
+            <p class="text-lg sm:text-xl font-medium leading-tight inner-margin">
                 We drive business results by telling stories where your consumers are paying the most attention. The modern-day creative manifesto that builds brand, emotional connection & revenue. 
             </p>
         </div>
     </div>
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 flex marketing-number">
+        <div class="col-span-12 lg:col-span-1 flex inner-margin">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 02
             </p>
         </div>
 
         <div class="col-span-3 flex">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
+            <h3 class=" uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 inner-margin">
                 Social
             </h3>
         </div>
         
         <div class="col-span-12 sm:col-span-11 lg:col-span-7 flex items-center">
-            <p class="text-xl font-medium leading-tight marketing-desc">
+            <p class="text-lg sm:text-xl font-medium leading-tight inner-margin">
                 As a true social AOR we build brand & community by combining relevance with contextual reach & distribution. Social media is “the media” and with reactive community management, social-first campaigns & influencer partnerships we make sure our clients are participating in the conversation.
             </p>
         </div>
     </div>
     
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 flex marketing-number">
+        <div class="col-span-12 lg:col-span-1 flex inner-margin">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 03
             </p>
         </div>
 
         <div class="col-span-3 flex">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
+            <h3 class=" uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 inner-margin">
                 Transformation
             </h3>
         </div>
         
         <div class="col-span-12 sm:col-span-11 lg:col-span-7 flex items-center">
-            <p class="text-xl font-medium leading-tight marketing-desc">
+            <p class="text-lg sm:text-xl font-medium leading-tight inner-margin">
                 By passing on our savoir-faire, we educate, direct & build in house modern-day marketing teams so businesses can continue to ride the electronic wave.
             </p>
         </div>
     </div>
 
     <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
-        <div class="col-span-12 lg:col-span-1 flex marketing-number">
+        <div class="col-span-12 lg:col-span-1 flex inner-margin">
             <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 04
             </p>
         </div>
 
         <div class="col-span-3 flex">
-            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 marketing-title">
+            <h3 class=" uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0 inner-margin">
                 DNA
             </h3>
         </div>
         
         <div class="col-span-12 sm:col-span-11 lg:col-span-7 flex items-center">
-            <p class="text-xl font-medium leading-tight marketing-desc">
+            <p class="text-lg sm:text-xl font-medium leading-tight inner-margin">
                 We help clients find, reshape and refine their unique DNA. We unlock the irrational, intangible things that make a brand unique. This DNA forms the foundations for creative, innovative work to be built on.
             </p>
         </div>
