--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -119,7 +119,7 @@ h3 {
 .outer-margin {
   @apply pl-4 pr-4 md:pl-8 md:pl-8 xl:pl-12 xl:pr-12 !important;
 }
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1280px) {
   .outer-margin {
     padding-left: 1rem !important;
   }
@@ -151,7 +151,7 @@ h3 {
   grid-template-rows: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1280px) {
   .grid-columns {
     padding-left: 1rem !important;
   }
@@ -167,11 +167,6 @@ h3 {
   @apply grid grid-cols-6 sm:grid-cols-12;
 }
 
-@media (min-width: 768px) {
-  .grid-columns {
-    padding-left: 1rem;
-  }
-}
 
 /* GRID LINES */
 .grid-columns-line {
