--- a/_includes/component/menu.njk
+++ b/_includes/component/menu.njk
@@ -9,16 +9,10 @@
                 </span>
             </a>
         </div>
-
-        <div class="col-span-10 hidden sm:flex items-center justify-center">
-            <p class="text-sm sm:text-lg font-mono uppercase leading-none">
-                <span class="">A contemporary communications company</span>
-            </h3>
-        </div>
         
-        <div class="col-span-1 sm:col-start-12 flex items-center justify-end sm:justify-center mr-0 sm:mr-8 lg:mr-0">
-            <a href="#contact" class="text-lg font-mono uppercase leading-none">
-                Contact
+        <div class="col-span-2 sm:col-start-11 flex items-center justify-end sm:justify-center mr-0 sm:mr-8 lg:mr-0">
+            <a href="#" class="text-lg font-mono uppercase leading-none">
+                Launching 2024
             </a>
         </div>
     </div>
