--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -29,7 +29,7 @@
         {% endblock %}
 
         {# {% include "section/cta.njk" %} #}
-        {% include "section/footer.njk" %}
+        {# {% include "section/footer.njk" %} #}
 
         <grid class="-z-10 absolute">
             {% include "component/grid.njk" %}
