--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-description: A contemporary communications company with a maniacal focus on the modern craftsmanships of electronic advertising.
+description: A software company powering the creator economy. Launching 2024
 title: Veblen Giffen
 ---
 
@@ -48,7 +48,7 @@ title: Veblen Giffen
 
 {% include "section/video.njk" %}
 
-{% include "section/mission.njk" %}
+{# {% include "section/mission.njk" %}
 
 {% include "section/marketing.njk" %}
 
@@ -56,7 +56,7 @@ title: Veblen Giffen
 
 {% include "section/ourclients.njk" %}
 
-{% include "section/testimonials.njk" %}
+{% include "section/testimonials.njk" %} #}
 
 
 {% endblock %}
