--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -2,10 +2,8 @@
     
     <div class="video-container border-b border-gray-900 justify-center items-center flex bg-green-500">
         <button class="h-full w-full justify-center absolute z-50 font-mono uppercase flex items-center gap-x-2 text-xl" id="playPauseButton">
-            <svg width="16" height="19" viewBox="0 0 16 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.38623 0.0400391L15.9747 9.04004L0.386231 18.04L0.38623 0.0400391Z" fill="black"/>
-            </svg>
-            Play
+            
+            A software company powering the creator economy.
         </button>
         <div class="z-10 lines-on-green horizontal-lines top-0"></div>
         
@@ -13,14 +11,6 @@
             {% include "component/grid.njk" %}
         </div>
 
-        <div>
-            <div class="-z-0" id="videoContainer" style="display: none;">
-                <video id="videoPlayer">
-                    <source src="/src/images/vg-launch-video.webm" type="video/webm">
-                    <source src="/src/images/vg-launch-video.mp4" type="video/mp4" />
-                </video>
-            </div>
-        </div>
     </div>
 </div>
     
